# books.scrape.com

./: .gitignore  app_duck.py  pyproject.toml
src/: app.py  duckdb_permanent.py  main.py
utils/: helpers.py
