[tool.poetry]
name = "project2"
version = "0.1.0"
description = ""
authors = ["Dan Nelson <danelson@nwi.net>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
pyarrow = "^14.0.1"
duckdb = "0.9.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
black = "^23.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
